Src/BootCamp.Chapter/Examples/InterfacePolution/Good/KaisinelBootCampService.cs
namespace BootCamp.Chapter.Examples.InterfacePolution.Good
{
    public class KaisinelBootCampService : IKaisinelBootCampService
    {
        public Lesson GetLesson(int lesson)
        {
            // Implementation
            return new Lesson();
        }
        public void CreateLesson(Lesson lesson)
        {
            // Implementation
        }
        public void SignalStart(Lesson lesson)
        {
            // Implementation
        }
        public void Stream(Lesson lesson)
        {
            // Implementation
        }
    }
}